--- a/css/login.css
+++ b/css/login.css
@@ -5,7 +5,7 @@ a{text-decoration:none;display:block;}
 li{list-style:none;}
 .fl{float:left}
 .fr{float:right}
-.reg{width:400px;height:300px;border:2px solid white;position:absolute;top:100px;left:100px;}
+.reg{width:400px;height:340px;border:2px solid white;position:absolute;top:100px;left:100px;}
 .reg_zhuce{height:250px;display:none;}
 
 .reg .regh4,.reg_a{width:100%;height:35px;font: bold 14px/35px arial,sans-serif;background:-webkit-linear-gradient(top,skyblue,white);text-align:center;border-radius:40px;}
@@ -14,7 +14,7 @@ li{list-style:none;}
 .reg_zhuce .reg_p{margin-top:10px;}
 .reg .reg_p input{width:90%;height:30px;background-color:transparent;box-shadow:0px 0px 2px white;border:2px solid white;margin:0px 0 0 15px;padding-left:5px;border-radius:50px;}
 .reg .reg_a{display:block;width:100%;position:relative;bottom:0px;text-decoration:none;color:black;}
-.reg_zhuce .tishi{height:20px;width:90%;font-size:14px;background:rgba(0,0,0,0.2);border-radius:5px;margin-left:15px;}
+.reg_zhuce .tishi{height:20px;width:90%;font-size:14px;background:rgba(0,0,0,0.2);border-radius:5px;margin-left:15px;color:red;text-align:center;display:none;}
 .reg_zhuce .reg_p{margin-top:10px;}
 .reg_zhuce .reg_a{position:relative;bottom:8px;}
 .reg  .check{margin-left:15px;color:deepskyblue;}
@@ -24,3 +24,5 @@ li{list-style:none;}
 #user{width:404px;height:30px;background:skyblue;position:relative;top:68px;left:100px;}
 #user a{font:bold 14px/30px arial,sans-serif;margin-left:10px; float:left;}
 #userinfo{width:80px;height:30px;line-height:30px;float:left;}
+
+#logintip{width:299px;height:20px;font-size:16px;color:red;text-align:center;background:rgba(0,0,0,0.2);margin:10px auto;display:none;}
