--- a/css/publick.css
+++ b/css/publick.css
@@ -1,5 +1,5 @@
 *{padding:0px;margin:0px;}
-html,body{width:100%;height:100%;}
+html,body{width:100%;}
 body{background: #ae975d;overflow-x:hidden;}
 a{text-decoration:none;display:block;}
 li{list-style:none;}
@@ -93,3 +93,31 @@ li{list-style:none;}
 
 
 
+	.snowfx{position:fixed; top:0; left:50%;width:1920px;margin-left:-960px; z-index:1;}
+.snowfx li{ list-style:none;position:absolute; top:0; width:50px;height:47px;background:url('http://frontend.soji.so/Xiaohui/2018/01/08hndx1yhdpc/images/snow_01.png') no-repeat center; background-size:100% auto;}
+.snowfx .snow1{width:50px;height:47px; left:324px;-webkit-animation: snow 15s linear 0s both infinite; opacity:1;animation: snow 15s linear 0s both infinite; opacity:1;}
+.snowfx .snow2{width:30px;height:37px;left:500px;-webkit-animation: snow 15s linear 1.2s both infinite;animation: snow 15s linear 1.2s both infinite;opacity:0.75;}
+.snowfx .snow3{width:45px;height:47px;left:1040px;-webkit-animation: snow 15s linear 2s both infinite;animation: snow 15s linear 2s both infinite;opacity:1;}
+.snowfx .snow4{width:70px;height:70px;left:1540px;-webkit-animation: snow 15s linear 2.7s both infinite;animation: snow 15s linear 2.7s both infinite;opacity:1;}
+.snowfx .snow5{width:32px;height:35px;left:1254px;-webkit-animation: snow 15s linear 3.8s both infinite;animation: snow 15s linear 3.8s both infinite;opacity:0.7;}
+.snowfx .snow6{width:65px;height:65px;left:800px;-webkit-animation: snow 15s linear 4.9s both infinite;animation: snow 15s linear 4.9s both infinite;opacity:1;}
+.snowfx .snow7{width:25px;height:27px;left:1140px;-webkit-animation: snow 15s linear 6.3s both infinite;animation: snow 15s linear 6.3s both infinite;opacity:0.7;}
+.snowfx .snow8{width:45px;height:47px;left:1440px;-webkit-animation: snow 15s linear 7.5s both infinite;animation: snow 15s linear 7.5s both infinite;opacity:1;}
+.snowfx .snow9{width:15px;height:17px;left:1340px;-webkit-animation: snow 15s linear 8.3s both infinite;animation: snow 15s linear 8.3s both infinite;opacity:0.5;}
+.snowfx .snow10{width:48px;height:52px;left:413px;-webkit-animation: snow 15s linear 9.5s both infinite;animation: snow 15s linear 9.5s both infinite;opacity:0.9;}
+.snowfx .snow11{width:35px;height:37px;left:1120px;-webkit-animation: snow 15s linear 11.3s both infinite;animation: snow 15s linear 11.3s both infinite;opacity:0.8;}
+.snowfx .snow12{width:52px;height:55px;left:372px;-webkit-animation: snow 15s linear 12.5s both infinite;animation: snow 15s linear 12.5s both infinite;opacity:1;}
+@-webkit-keyframes snow{
+	0%{top:-70px;}
+	98%{top:1080px;}
+	100%{top:1080px;}
+}
+@keyframes snow{
+	0%{top:-70px;}
+	98%{top:1080px;}
+	100%{top:1080px;}
+}
+@-webkit-keyframes opacity{
+	0%{opacity: 0;}
+	100%{opacity: 1;}
+}
