--- a/css/groundLessTalk.css
+++ b/css/groundLessTalk.css
@@ -3,10 +3,10 @@
 * @Date:2018-04-02 20:31:35
 * @Email:li3083@126.com
 * @Last Modified by:liwen
-* @Last Modified time:2018-04-05 14:30:38
+* @Last Modified time:2018-04-06 14:49:34
 */
 
-.con{width:820px;border-left:1px solid white;padding:15px;float:left;}
+.con{width:800px;border-left:1px solid white;padding:15px;float:left;}
 .info{color:white;line-height:35px;}
 .info span.proposal{font-weight:bold;}
 .info a{color:black;text-decoration:underline;color:white;}
@@ -14,4 +14,5 @@
 .answer_btn{display:inline-block;width:45px;height:20px;font-size:14px;text-align:center;line-height:20px;background:skyblue;position:absolute;right:10px;cursor:pointer;border-radius:4px;}
 /* 右边部分 */
 .answer{display:none;background:rgba(0,0,0,0.3);padding:17px;border-radius:5px;}
-.section_w{float:left;}
+.section_w{width:290px;float:left;}
+#course{font-weight:bold;font-size:20px;}
